# langchain-google

./: .gitignore  .release-please-manifest.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  FIXES_SUMMARY.md  PR_INSTRUCTIONS.md  PULL_REQUEST.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  add_imports.py  check_chat_models_lines.py  check_line_lengths.py  debug_restriction.py  fix_block_translator_types.py  fix_chat_models_lines.py  fix_type_annotation.py  imports_to_add.txt  migrate_tests.py  pyproject.toml  release-please-config.json  test_alias.py  test_file.py  test_fix.py  test_integer_fix.py  test_streaming_fix.py  update_configs.py  update_convert_to_parts.py  update_message_conversion.py  verify_unit_test.py
libs/common/: Makefile  README.md  pyproject.toml
libs/common/langchain_google_common/: __init__.py  functions_utils.py
libs/common/tests/unit_tests/: test_functions_utils.py
libs/community/: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
libs/community/examples/bigquery_callback/: README.md  async_example.py  basic_example.py  event_filtering_example.py  langgraph_agent_analytics.ipynb  langgraph_agent_example.py  populate_sample_data.py
libs/community/langchain_google_community/: __init__.py  _utils.py  bigquery.py  bigquery_vector_search.py  docai.py  documentai_warehouse.py  drive.py  gcs_directory.py  gcs_file.py  gemini_files.py  geocoding.py  google_speech_to_text.py  places_api.py  search.py  texttospeech.py  translate.py  vertex_ai_search.py  vertex_check_grounding.py  vertex_rank.py  vision.py
libs/community/langchain_google_community/bq_storage_vectorstores/: _base.py  bigquery.py  featurestore.py  utils.py
libs/community/langchain_google_community/calendar/: base.py  create_event.py  current_datetime.py  delete_event.py  get_calendars_info.py  move_event.py  search_events.py  toolkit.py  update_event.py  utils.py
libs/community/langchain_google_community/callbacks/: __init__.py  bigquery_callback.py
libs/community/langchain_google_community/gmail/: base.py  create_draft.py  get_message.py  get_thread.py  loader.py  search.py  send_message.py  toolkit.py  utils.py
libs/community/langchain_google_community/model_armor/: Google_Model_Armor_Langchain_Runnables.ipynb  README.md  __init__.py  _client_utils.py  base_runnable.py  middleware.py  runnable.py
libs/community/langchain_google_community/rank/: _sdk_manager.py  rank.py
libs/community/langchain_google_community/ranker/: rank.py
libs/community/langchain_google_community/sheets/: __init__.py  base.py  create_spreadsheet_tool.py  enums.py  get_spreadsheet_info.py  read_sheet_tools.py  toolkit.py  urls.py  utils.py  write_sheet_tools.py
libs/community/langchain_google_community/tasks/: __init__.py  base.py  create_task.py  delete_task.py  get_task.py  list_tasks.py  toolkit.py  update_task.py  utils.py
libs/community/tests/: conftest.py
libs/community/tests/integration_tests/: .env.example  fake.py  test_bigquery.py  test_bigquery_vector_search.py  test_check_grounding.py  test_docai.py  test_docai_warehoure_retriever.py  test_geocoding.py  test_geocoding_integration.py  test_googlesearch_api.py  test_model_armor_integration.py  test_placeholder.py  test_rank.py  test_sheets_integration.py  test_vertex_ai_search.py  test_vision.py
libs/community/tests/unit_tests/: test_bigquery.py  test_check_grounding.py  test_docai.py  test_drive.py  test_gcs_file.py  test_gemini_files.py  test_geocoding.py  test_google_calendar.py  test_google_tasks.py  test_googlesearch_api.py  test_model_armor_middleware.py  test_model_armor_runnable.py  test_rank.py  test_sheets.py  test_utils.py  test_vertex_ai_search.py
libs/genai/: CHANGELOG.md  Makefile  README.md  pyproject.toml
libs/genai/langchain_google_genai/: __init__.py  _client_utils.py  _common.py  _compat.py  _enums.py  _function_utils.py  _genai_extension.py  _image_utils.py  _version.py  block_translator.py  chat_models.py  embeddings.py  genai_aqa.py  google_vector_store.py  llms.py  utils.py
libs/genai/langchain_google_genai/data/: _profiles.py  models.json
libs/genai/scripts/: check_imports.py
libs/genai/tests/: conftest.py  test_chat_models.py
libs/genai/tests/integration_tests/: .env.example  test_builtin_tools.py  test_callbacks.py  test_chat_models.py  test_embeddings.py  test_function_call.py  test_llms.py  test_standard.py  test_structured_output_integration.py  test_tools.py
libs/genai/tests/unit_tests/: test_chat_models.py  test_chat_models_protobuf_fix.py  test_common.py  test_del_event_loop.py  test_docstring_crossrefs.py  test_embeddings.py  test_function_utils.py  test_genai_aqa.py  test_google_vector_store.py  test_image_utils.py  test_imports.py  test_llms.py  test_modality_validation.py  test_standard.py  test_streaming_partial_args.py
libs/vertexai/: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
libs/vertexai/langchain_google_vertexai/: __init__.py  _anthropic_parsers.py  _anthropic_utils.py  _base.py  _client_utils.py  _compat.py  _content_catching.py  _enums.py  _image_utils.py  _json_schema_utils.py  _retry.py  _usage.py  _utils.py  _version.py  callbacks.py  chains.py  chat_models.py  embeddings.py  functions_utils.py  gemma.py  imagegen.py  llms.py  model_garden.py  search.py  utils.py  vision_models.py
libs/vertexai/langchain_google_vertexai/data/: _profiles.py  models.json  profile_augmentations.toml  profiles.py
libs/vertexai/langchain_google_vertexai/evaluators/: _core.py  evaluation.py
libs/vertexai/langchain_google_vertexai/model_garden_maas/: __init__.py  _base.py  llama.py  mistral.py
libs/vertexai/langchain_google_vertexai/tools/: __init__.py  vertex_search.py
libs/vertexai/langchain_google_vertexai/vectorstores/: __init__.py  _document_storage.py  _sdk_manager.py  _searcher.py  _utils.py  _v2_operations.py  document_storage.py  test_vector_search.ipynb  vectorstores.py
libs/vertexai/tests/: conftest.py
libs/vertexai/tests/integration_tests/: .env.example  TODO.md  conftest.py  test_anthropic_cache.py  test_anthropic_files.py  test_callbacks.py  (+19 more)
(+93 files in other folders)
