[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "langchain-google-genai"
version = "2.1.11"
description = "An integration package connecting Google's genai package and LangChain"
authors = []
license = {text = "MIT"}
requires-python = ">=3.9"
readme = "README.md"
repository = "https://github.com/langchain-ai/langchain-google"

dependencies = [
    "langchain-core>=0.3.75",
    "google-ai-generativelanguage>=0.7,<1",
    "pydantic>=2,<3",
    "filetype>=1.2,<2",
]

[project.urls]
"Source Code" = "https://github.com/langchain-ai/langchain-google/tree/main/libs/genai"
"Release Notes" = "https://github.com/langchain-ai/langchain-google/releases"
repository = "https://github.com/langchain-ai/langchain-google"

[dependency-groups]
lint = ["ruff<0.13,>=0.12.2"]
typing = [
    "mypy<1.19,>=1.18.1",
    "types-requests>=2.31,<3",
    "types-google-cloud-ndb>=2.2.0.1,<3",
    "types-protobuf>=4.24.0.20240302,<5",
    "numpy>=1.26.2",
]
test = [
    "pytest>=8.4,<9",
    "freezegun>=1.5,<2",
    "pytest-mock>=3.14,<4",
    "syrupy>=4.9,<5",
    "pytest-watcher>=0.4,<1",
    "pytest-asyncio>=0.21,<1",
    "pytest-retry>=1.7,<2",
    "pytest-socket>=0.7,<1",
    "numpy>=1.26.4; python_version<'3.13'",
    "numpy>=2.1.0; python_version>='3.13'",
    "langchain-tests>=0.3,<1",
]

test_integration = [
    "pytest>=8.4,<9",
]

dev = [
    "types-requests>=2.31.0,<3",
    "types-google-cloud-ndb>=2.2.0.1,<3",
]

[tool.ruff]
fix = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [ "ALL",]
ignore = [
    "C90",     # McCabe complexity
    "COM812",  # Messes with the formatter
    "CPY",     # No copyright
    "FIX002",  # Line contains TODO
    "ISC001",  # Messes with the formatter
    "PERF203", # Rarely useful
    "PLR09",   # Too many something (arg, statements, etc)
    "RUF012",  # Doesn't play well with Pydantic
    "TC001",   # Doesn't play well with Pydantic
    "TC002",   # Doesn't play well with Pydantic
    "TC003",   # Doesn't play well with Pydantic
    "TD002",   # Missing author in TODO
    "TD003",   # Missing issue link in TODO

    # TODO rules
    "ANN401",  # No Any types
    "BLE",     # Blind exceptions
    "DOC",     # Docstrings (preview)
    "ERA",     # No commented-out code
    "PLR2004", # Comparison to magic number
]
unfixable = [
    "B028",    # People should intentionally tune the stacklevel
    "PLW1510", # People should intentionally set the check argument
]

pydocstyle.convention = "google"
pydocstyle.ignore-var-parameters = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = [ "D1", "S", "SLF",]
"scripts/**" = [ "INP", "S",]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
disallow_untyped_defs = "True"

# TODO: activate for 'strict' checking
disallow_any_generics = false
warn_return_any = false

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
# --strict-markers will raise errors on unknown marks.
# https://docs.pytest.org/en/7.1.x/how-to/mark.html#raising-errors-on-unknown-marks
#
# https://docs.pytest.org/en/7.1.x/reference/reference.html
# --strict-config       any warnings encountered while parsing the `pytest`
#                       section of the configuration file raise errors.
#
# https://github.com/tophat/syrupy
# --snapshot-warn-unused    Prints a warning on unused snapshots rather than fail the test suite.
#addopts = "--snapshot-warn-unused --strict-markers --strict-config --durations=5"
# Registering custom markers.
# https://docs.pytest.org/en/7.1.x/example/markers.html#registering-markers
markers = [
    "requires: mark tests as requiring a specific library",
    "asyncio: mark tests as requiring asyncio",
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"